--- a/package.json
+++ b/package.json
@@ -3,27 +3,65 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3003",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "test": "jest",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@anatine/zod-mock": "^3.13.4",
+    "@faker-js/faker": "^9.3.0",
+    "@storybook/nextjs": "^8.4.6",
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
-    "next": "14.2.3",
+    "next": "15.0.3",
+    "postcss-import": "^16.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "ts-node": "^10.9.2",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "3",
+    "@jest/globals": "^29.7.0",
+    "@storybook/addon-essentials": "8.4.6",
+    "@storybook/addon-interactions": "8.4.6",
+    "@storybook/addon-onboarding": "8.4.6",
+    "@storybook/blocks": "8.4.6",
+    "@storybook/react": "8.4.6",
+    "@storybook/test": "8.4.6",
+    "@swc/core": "^1.10.0",
+    "@swc/jest": "^0.2.37",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.13",
+    "@types/react-dom": "^18.3.1",
     "daisyui": "^4.11.1",
-    "eslint": "^8",
+    "eslint": "^9.16.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
+    "eslint-plugin-jest": "^28.9.0",
+    "eslint-plugin-storybook": "^0.11.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.6.6",
+    "postcss": "^8.4.49",
+    "storybook": "8.4.6",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
