--- a/package.json
+++ b/package.json
@@ -1,33 +1,60 @@
 {
   "name": "next-template",
-  "version": "0.1.0",
+  "description": "nextjs template for install useful packages",
+  "keywords": [
+    "nextjs",
+    "template",
+    "typescript",
+    "tailwindcss",
+    "daisyui",
+    "msw",
+    "jest",
+    "storybook",
+    "testing-library",
+    "eslint",
+    "prettier"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GrangbelrLurain/nextTemplate.git"
+  },
+  "license": "MIT",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3003",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "test": "jest",
-    "build-storybook": "storybook build"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "typecheck": "tsc --noEmit",
+    "prepare": "husky"
   },
   "dependencies": {
     "@anatine/zod-mock": "^3.13.4",
     "@faker-js/faker": "^9.3.0",
+    "@hookform/resolvers": "^3.9.1",
     "@storybook/nextjs": "^8.4.6",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "next": "15.0.3",
     "postcss-import": "^16.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
+    "react-hook-form": "^7.53.2",
+    "react-icons": "^5.4.0",
     "ts-node": "^10.9.2",
     "zod": "^3.23.8",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3",
+    "@commitlint/config-conventional": "^19.6.0",
     "@jest/globals": "^29.7.0",
     "@storybook/addon-essentials": "8.4.6",
     "@storybook/addon-interactions": "8.4.6",
@@ -42,20 +69,30 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
-    "daisyui": "^4.11.1",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "commitlint": "^19.6.0",
+    "daisyui": "^4.12.14",
     "eslint": "^9.16.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.9.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^0.11.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.10",
     "msw": "^2.6.6",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "storybook": "8.4.6",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.16",
     "ts-jest": "^29.2.5",
     "typescript": "^5"
   },
