--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "semi": true,
   "printWidth": 100,
   "bracketSpacing": true,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "arrowParens": "always"
 }
