--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "msw": "^2.6.6",
     "next": "15.0.3",
     "postcss-import": "^16.1.0",
     "react": "^18",
@@ -77,10 +78,8 @@
     "commitlint": "^19.6.0",
     "daisyui": "^4.12.14",
     "eslint": "^9.16.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^0.11.1",
@@ -88,13 +87,13 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.10",
-    "msw": "^2.6.6",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "storybook": "8.4.6",
     "tailwindcss": "^3.4.16",
     "ts-jest": "^29.2.5",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.17.0"
   },
   "msw": {
     "workerDirectory": [
