--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,68 @@
     "source.fixAll.eslint": "explicit"
   },
   "eslint.validate": ["javascript", "typescript", "javascriptreact", "typescriptreact"],
-  "prettier.requireConfig": true
+  "prettier.requireConfig": true,
+  "commit-message-editor.staticTemplate": ["[{type}] {subject}", "", "{description}", ""],
+  "commit-message-editor.dynamicTemplate": ["[{type}] {subject}", "", "{description}", ""],
+  "commit-message-editor.tokens": [
+    {
+      "label": "타입",
+      "name": "type",
+      "type": "enum",
+      "description": "종류",
+      "options": [
+        {
+          "label": "feat",
+          "value": "feat",
+          "description": "새로운 기능"
+        },
+        {
+          "label": "fix",
+          "value": "fix",
+          "description": "버그 수정"
+        },
+        {
+          "label": "docs",
+          "value": "docs",
+          "description": "문서 수정"
+        },
+        {
+          "label": "style",
+          "value": "style",
+          "description": "코드 포맷팅"
+        },
+        {
+          "label": "refactor",
+          "value": "refactor",
+          "description": "코드 리팩토링"
+        },
+        {
+          "label": "test",
+          "value": "test",
+          "description": "테스트 코드"
+        },
+        {
+          "label": "chore",
+          "value": "chore",
+          "description": "기타 변경사항"
+        }
+      ]
+    },
+    {
+      "label": "제목",
+      "name": "subject",
+      "type": "text",
+      "description": "한 단어 요약 제목"
+    },
+    {
+      "label": "Markdown",
+      "name": "description",
+      "type": "text",
+      "description": "마크다운 형식으로 변경사항 작성",
+      "multiline": true
+    }
+  ],
+  "[shellscript]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
+  }
 }
