--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
+    "to-case": "^2.0.0",
     "ts-node": "^10.9.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.2"
