--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,18 @@
   },
   "eslint.validate": ["javascript", "typescript", "javascriptreact", "typescriptreact"],
   "prettier.requireConfig": true,
-  "commit-message-editor.staticTemplate": ["[{type}] {subject}", "", "{description}", ""],
-  "commit-message-editor.dynamicTemplate": ["[{type}] {subject}", "", "{description}", ""],
+  "commit-message-editor.staticTemplate": [
+    "{type}/{name}/{issueNo}:{subject}",
+    "",
+    "{description}",
+    ""
+  ],
+  "commit-message-editor.dynamicTemplate": [
+    "{type}/{name}/{issueNo}:{subject}",
+    "",
+    "{description}",
+    ""
+  ],
   "commit-message-editor.tokens": [
     {
       "label": "타입",
@@ -53,16 +63,29 @@
       ]
     },
     {
+      "label": "이름",
+      "name": "name",
+      "type": "text",
+      "description": "작성자명"
+    },
+    {
+      "label": "ISSUE NO.",
+      "name": "issueNo",
+      "type": "text",
+      "description": "Github Issue No.",
+      "prefix": "#"
+    },
+    {
       "label": "제목",
       "name": "subject",
       "type": "text",
-      "description": "한 단어 요약 제목"
+      "description": "한 단어로 작성"
     },
     {
       "label": "Markdown",
       "name": "description",
       "type": "text",
-      "description": "마크다운 형식으로 변경사항 작성",
+      "description": "마크다운으로 설명 작성",
       "multiline": true
     }
   ],
