--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -1,4 +1,4 @@
-name: Auto Close Issue on PR Merge
+name: Auto Close Issue
 on:
   pull_request:
     types: [closed]
@@ -7,17 +7,20 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Extract and Close Issue
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # PR 제목에서 이슈 번호 추출
-          ISSUE_NUMBER=$(echo "${{ github.event.pull_request.title }}" | grep -oE '#[0-9]+' | tr -d '#')
+          # \/ 를 사용하여 슬래시를 포함한 패턴 매칭
+          ISSUE_NUMBER=$(echo "${{ github.event.pull_request.title }}" | grep -oE '\/\#[0-9]+' | tr -d '/#')
 
           if [ -z "$ISSUE_NUMBER" ]; then
             echo "PR 제목에 이슈 번호가 없습니다."
             exit 1
           fi
 
-          # 이슈 종료
+          echo "이슈 번호: $ISSUE_NUMBER"
           gh issue close $ISSUE_NUMBER --comment "PR #${{ github.event.pull_request.number }} 머지로 인해 자동 종료되었습니다." --reason completed
