--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -17,12 +17,15 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ISSUE_NUMBER=$(echo "${{ github.event.pull_request.title }}" | grep -oE '\/\#[0-9]+' | tr -d '/#')
+          BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
+
+          # 브랜치명에서 /#숫자 패턴 추출
+          ISSUE_NUMBER=$(echo "$BRANCH_NAME" | grep -oE '\/\#[0-9]+' | tr -d '/#')
 
           if [ -z "$ISSUE_NUMBER" ]; then
-            echo "PR 제목에 이슈 번호가 없습니다."
+            echo "❌ 브랜치명에 이슈 번호가 없습니다."
             exit 1
           fi
 
-          echo "이슈 번호: $ISSUE_NUMBER"
-          gh issue close $ISSUE_NUMBER --comment "PR #${{ github.event.pull_request.number }} 머지로 인해 자동 종료되었습니다." --reason completed
+          echo "✅ 이슈 번호: $ISSUE_NUMBER"
+          gh issue close "$ISSUE_NUMBER" --comment "PR #${{ github.event.pull_request.number }} 머지로 인해 자동 종료되었습니다." --reason completed
