[feat/sbc] 공통 헤더 추가
헤더 추가, 폴더 구조 패턴 설명 추가(README.md), 절대 경로 추가(tsconfig)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,14 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@Public/*": ["../public/*"],
+      "@App/*": ["../app/*"],
+      "@Pages/*": ["../pages/*"],
+      "@Widgets/*": ["./src/widgets/*"],
+      "@Features/*": ["./src/features/*"],
+      "@Entities/*": ["./src/entities/*"],
+      "@Shared/*": ["./src/shared/*"]
     },
     "types": ["jest", "@testing-library/jest-dom"],
     "target": "ES2017"
