--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,8 +31,8 @@
           "description": "새로운 기능"
         },
         {
-          "label": "fix",
-          "value": "fix",
+          "label": "hotfix",
+          "value": "hotfix",
           "description": "버그 수정"
         },
         {
@@ -51,14 +51,29 @@
           "description": "코드 리팩토링"
         },
         {
-          "label": "test",
-          "value": "test",
-          "description": "테스트 코드"
-        },
-        {
           "label": "chore",
           "value": "chore",
-          "description": "기타 변경사항"
+          "description": "package.json, env 등"
+        },
+        {
+          "label": "build",
+          "value": "build",
+          "description": "빌드 관련 설정 수정"
+        },
+        {
+          "label": "deploy",
+          "value": "deploy",
+          "description": "Ci/Cd, Helm, Docker"
+        },
+        {
+          "label": "revert",
+          "value": "revert",
+          "description": "원복"
+        },
+        {
+          "label": "test",
+          "value": "test",
+          "description": "테스트"
         }
       ]
     },
