--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,5 +106,8 @@
   ],
   "[shellscript]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
+  },
+  "[dotenv]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
   }
 }
