--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "iconv-lite": "^0.6.3",
     "msw": "^2.6.6",
     "next": "15.0.3",
+    "openapi-typescript": "^7.8.0",
     "postcss-import": "^16.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
+    "subflow": "^0.9.2",
     "to-case": "^2.0.0",
     "ts-node": "^10.9.2",
     "zod": "^3.23.8",
